--- a/src/app/product/modules/record-visit/record-visit-detail/record-visit-detail.component.html
+++ b/src/app/product/modules/record-visit/record-visit-detail/record-visit-detail.component.html
@@ -1,20 +1,41 @@
 <app-loader *ngIf="isLoading"></app-loader>
 <div class="patient-detail">
-    <div class="patient-detail-container">
-        <div class="patient-detail-container-header">Name</div>
-        <div class="patient-detail-container-data">{{patient?.firstname}}</div>
+    <div class="patient-detail-wrapper">
+        <div class="patient-detail-container">
+            <div class="patient-detail-container-header">Name: </div>
+            <div class="patient-detail-container-data">{{patient?.firstname}} {{patient?.lastname}}</div>
+        </div>
+        <div class="patient-detail-container">
+            <div class="patient-detail-container-header">Contact No.: </div>
+            <div class="patient-detail-container-data">{{patient?.number}}</div>
+        </div>
+        <div class="patient-detail-container">
+            <div class="patient-detail-container-header">Total Amount: </div>
+            <div class="patient-detail-container-data">{{patient?.totalAmount ? patient.totalAmount : 0}}</div>
+        </div>
+        <div class="patient-detail-container">
+            <div class="patient-detail-container-header">Remaining Amount: </div>
+            <div class="patient-detail-container-data">{{patient?.pendingAmount ? patient.pendingAmount : 0}}</div>
+        </div>
     </div>
-    <div class="patient-detail-container">
-        <div class="patient-detail-container-header">Contact No.</div>
-        <div class="patient-detail-container-data">{{patient?.number}}</div>
-    </div>
-    <div class="patient-detail-container">
-        <div class="patient-detail-container-header">Total Amount</div>
-        <div class="patient-detail-container-data">{{patient?.totalAmount ? patient.totalAmount : 0}}</div>
-    </div>
-    <div class="patient-detail-container">
-        <div class="patient-detail-container-header">Remaining Amount</div>
-        <div class="patient-detail-container-data">{{patient?.pendingAmount ? patient.pendingAmount : 0}}</div>
+    <div class="patient-detail-record-visit">
+        <table style="width:100%">
+            <!-- <caption>Record Visit</caption> -->
+            <tr>
+              <th>Treatment</th>
+              <th>Category</th>
+              <th>Date</th>
+              <th>Amount</th>
+            </tr>
+            <ng-template let-item let-last="last" ngFor [ngForOf]="recordVisits">
+                <tr>
+                    <td>{{item?.category}}</td>
+                    <td>{{item?.subCategory}}</td>
+                    <td>{{item?.createdDate | date: 'dd/MM/yyyy'}}</td>
+                    <td>{{item?.netAmount}}</td>
+                </tr>
+            </ng-template>
+        </table>
     </div>
 </div>
 
