--- a/src/assets/layout/css/layout-blue-grey.css
+++ b/src/assets/layout/css/layout-blue-grey.css
@@ -226,7 +226,7 @@
     vertical-align: middle;
     width: 200px;
     height: 30px;
-    background: url("../images/logo2x.png") top left no-repeat;
+    background: url("../images/logo3.png") top left no-repeat;
     background-size: 200px 30px; }
   .splash-screen .load-bar {
     position: relative;
