--- a/src/app/product/modules/Patient/patient-grid/patient-grid.component.html
+++ b/src/app/product/modules/Patient/patient-grid/patient-grid.component.html
@@ -1,9 +1,14 @@
 <div class="app-patient">
     <div class="patient-action-buttons">
-        <button #singleButton pButton label="Add Patient" (click)="addPatient()"></button>
-        <button #singleButton pButton label="Pending Amount" (click)="pendingAmountPatient()"></button>
-        <!-- [disabled]="!(selectedPatients.length > 0)" -->
-        <button #singleButton pButton label="Send SMS" (click)="sendSms()"></button>
+        <h3>
+            Patients
+        </h3>
+        <div>
+            <button #singleButton pButton label="Add Patient" (click)="addPatient()"></button>
+            <button #singleButton pButton label="Pending Amount" (click)="pendingAmountPatient()"></button>
+            <button #singleButton pButton label="Send SMS" (click)="sendSms()"></button>
+        </div>
+        
     </div>
     <p-dataTable [value]="patients" [rows]="20" [(selection)]="selectedPatients" [loading]="loader"
         [paginator]="true" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]" [responsive]="true" #dt>
