--- a/src/app/product/modules/record-visit/record-visit/record-visit.component.html
+++ b/src/app/product/modules/record-visit/record-visit/record-visit.component.html
@@ -1,2 +1,2 @@
 <app-record-visit-search (eSelectedPatient)="onPatientSelection($event)"></app-record-visit-search>
-<app-record-visit-detail [patient]="patient"></app-record-visit-detail>
+<app-record-visit-detail [patient]="patient" [recordVisits]="recordVisits"></app-record-visit-detail>
