--- a/src/app/product/modules/dashboard/dashboard.component.html
+++ b/src/app/product/modules/dashboard/dashboard.component.html
@@ -91,61 +91,26 @@
         </p-panel> 
     </div>
     <div class="ui-g-12 ui-md-4">
-        <p-panel header="Activity" [style]="{'height':'100%'}">
+        <p-panel header="Treatment Count" [style]="{'height':'100%'}">
             <div class="activity-header">
                 <div class="ui-g">
                     <div class="ui-g-6">
-                        <span style="font-weight:bold">Last Activity</span>
-                        <p>Updated 1 minute ago</p>
+                        <span style="font-weight:bold">Treatment Count</span>
                     </div>
                     <div class="ui-g-6" style="text-align:right">
-                        <button type="button" label="Update" icon="ui-icon-update" pButton></button>
+                        <button (click)="getPatientByTreatmentType()" type="button" label="Update" icon="ui-icon-update" pButton></button>
                     </div>
                 </div>
             </div>
             <ul class="activity-list">
-                <li>
-                    <div class="count">$900</div>
-                    <div class="ui-g">
-                        <div class="ui-g-6">Income</div>
-                        <div class="ui-g-6">95%</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="count" style="background-color:#ffc107">$250</div>
-                    <div class="ui-g">
-                        <div class="ui-g-6">Tax</div>
-                        <div class="ui-g-6">24%</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="count" style="background-color:#673AB7">$125</div>
-                    <div class="ui-g">
-                        <div class="ui-g-6">Invoices</div>
-                        <div class="ui-g-6">55%</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="count" style="background-color:#00bcd4">$250</div>
-                    <div class="ui-g">
-                        <div class="ui-g-6">Expenses</div>
-                        <div class="ui-g-6">15%</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="count" style="background-color:#607D8B">$350</div>
-                    <div class="ui-g">
-                        <div class="ui-g-6">Bonus</div>
-                        <div class="ui-g-6">5%</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="count" style="background-color:#FF5722">$500</div>
-                    <div class="ui-g">
-                        <div class="ui-g-6">Revenue</div>
-                        <div class="ui-g-6">25%</div>
-                    </div>
-                </li>
+                <ng-template let-i="index" let-item let-last="last" ngFor [ngForOf]="patientByTreatments">
+                    <li>
+                        <div class="count" [ngStyle]="{'background-color':getColor(i)}">{{item.count}}</div>
+                        <div class="ui-g">
+                            <div class="ui-g-6">{{item.category}}</div>
+                        </div>
+                    </li>
+                </ng-template>
             </ul>
         </p-panel>
     </div>
