implementation of gl theme

--- a/src/assets/layout/css/gl-layout.css
+++ b/src/assets/layout/css/gl-layout.css
@@ -212,7 +212,7 @@
     opacity: 0;
     transform: scale(2.5); } }
 .splash-screen {
-  background-color: #3F51B5;
+  background-color: #f37038;
   height: 100%;
   width: 100%;
   position: fixed; }
@@ -243,13 +243,13 @@
     left: 50%;
     text-align: center; }
   .splash-screen .bar:nth-child(1) {
-    background-color: #E91E63;
+    background-color: #d6370a;
     animation: loading 3s linear infinite; }
   .splash-screen .bar:nth-child(2) {
-    background-color: #8BC34A;
+    background-color: #f37038;
     animation: loading 3s linear 1s infinite; }
   .splash-screen .bar:nth-child(3) {
-    background-color: #FFC107;
+    background-color: #d6370a;
     animation: loading 3s linear 2s infinite; }
 @keyframes loading {
   from {
@@ -507,7 +507,7 @@
 .login-panel {
   text-align: center;
   width: 350px;
-  min-height: calc(100vh - 106px);
+  min-height: 440px;
   padding: 50px 20px;
   margin: 100px auto 0 auto; }
   .login-panel .ui-g .ui-g-12 {
@@ -515,18 +515,18 @@
     .login-panel .ui-g .ui-g-12 .ui-button {
       margin-bottom: 20px; }
   .login-panel .ui-button:hover {
-    background-color: #00838f; }
+    background-color: #37474F; }
   .login-panel .ui-button:focus {
     outline: 0 none;
-    background-color: #08e3ff; }
+    background-color: #7b96a3; }
   .login-panel .ui-button.secondary:hover {
-    background-color: #ff8f00; }
+    background-color: #d6370a; }
   .login-panel .ui-button.secondary:focus {
     outline: 0 none;
-    background-color: #ffce3a; }
+    background-color: #a4d070; }
   .login-panel .ui-inputtext:focus {
     border-width: 0 0 2px 0;
-    border-color: #00bcd4;
+    border-color: #607D8B;
     padding-bottom: 0px; }
 
 .login-footer {
@@ -544,13 +544,13 @@
 @media (max-width: 1024px) {
   .login-panel {
     text-align: center;
-    min-height: calc(100vh - 106px);
+    min-height: 440px;
     margin: 100px auto 0 auto; } }
 @media (max-width: 640px) {
   .login-panel {
     text-align: center;
     width: 300px;
-    min-height: calc(100vh - 106px);
+    min-height: 440px;
     padding: 40px 20px;
     margin: 75px auto 0 auto; }
     .login-panel .ui-g .ui-g-12 {
@@ -586,7 +586,7 @@
     -webkit-border-radius: 3px;
     border-radius: 3px; }
     .exception-body .ui-button:hover {
-      background-color: #ff8f00; }
+      background-color: #558B2F; }
   .exception-body.error-page .exception-type {
     background-color: #e62a10; }
     .exception-body.error-page .exception-type img {
@@ -618,7 +618,7 @@
   -webkit-border-radius: 3px;
   border-radius: 3px; }
   .landing-wrapper .ui-button:hover {
-    background-color: #ff8f00; }
+    background-color: #558B2F; }
 .landing-wrapper #header {
   width: 100%;
   min-height: 400px;
@@ -935,7 +935,7 @@ body {
   z-index: 100;
   width: 100%;
   height: 75px;
-  background-color: #00bcd4;
+  background-color: #f37038;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
@@ -951,7 +951,7 @@ body {
     padding: 20px;
     height: 75px;
     width: 250px;
-    background-color: #00838f;
+    background-color: #d6370a;
     float: left;
     box-shadow: 3px 0 6px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 3px 0 6px rgba(0, 0, 0, 0.3);
@@ -960,7 +960,7 @@ body {
     padding: 15px;
     position: relative; }
     .layout-container .topbar .topbar-right #menu-button {
-      color: #212121;
+      color: #ffffff;
       display: inline-block;
       vertical-align: middle;
       height: 36px;
@@ -968,7 +968,7 @@ body {
       position: relative;
       left: -16px;
       top: 3px;
-      background-color: #ffc107;
+      background-color: #8BC34A;
       -moz-border-radius: 50%;
       -webkit-border-radius: 50%;
       border-radius: 50%;
@@ -1052,7 +1052,7 @@ body {
     .layout-container .topbar .topbar-right .topbar-items .search-item input:focus ~ label {
       top: -5px;
       font-size: 12px;
-      color: #00bcd4; }
+      color: #607D8B; }
     .layout-container .topbar .topbar-right .topbar-items .search-item input.ui-state-filled ~ label {
       display: none; }
     .layout-container .topbar .topbar-right .topbar-items .search-item label {
@@ -1146,19 +1146,19 @@ body {
       .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li a:hover {
         background-color: #676767; }
       .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink {
-        color: #ffc107; }
+        color: #8BC34A; }
         .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink i {
-          color: #ffc107; }
+          color: #8BC34A; }
         .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink:hover {
           color: #ffffff; }
           .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink:hover > i {
             color: #ffffff; }
     .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li.active-menuitem > a {
-      color: #212121;
-      background-color: #ffc107; }
+      color: #ffffff;
+      background-color: #8BC34A; }
       .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li.active-menuitem > a.active-menuitem-routerlink {
-        color: #212121;
-        background-color: #ffc107; }
+        color: #ffffff;
+        background-color: #8BC34A; }
         .layout-container .layout-menu.layout-menu-dark ul.ultima-menu li.active-menuitem > a.active-menuitem-routerlink i {
           color: #212121; }
   .layout-container .layout-menu .menuitem-badge {
@@ -1170,8 +1170,8 @@ body {
     height: 1em;
     margin-right: .5em;
     text-align: center;
-    background-color: #ffc107;
-    color: #212121;
+    background-color: #8BC34A;
+    color: #ffffff;
     font-size: 14px;
     font-weight: 700;
     line-height: 1em;
@@ -1281,18 +1281,18 @@ body {
       display: inline-block;
       vertical-align: middle; }
     .layout-container .ultima-menu li a.active-menuitem-routerlink {
-      color: #00bcd4; }
+      color: #8BC34A; }
       .layout-container .ultima-menu li a.active-menuitem-routerlink > i {
-        color: #00bcd4; }
+        color: #8BC34A; }
       .layout-container .ultima-menu li a.active-menuitem-routerlink:hover {
         color: #212121; }
         .layout-container .ultima-menu li a.active-menuitem-routerlink:hover > i {
           color: #757575; }
   .layout-container .ultima-menu li.active-menuitem > a {
-    color: #00bcd4;
+    color: #607D8B;
     background-color: #e8e8e8; }
     .layout-container .ultima-menu li.active-menuitem > a i {
-      color: #00bcd4; }
+      color: #607D8B; }
     .layout-container .ultima-menu li.active-menuitem > a i:last-child {
       -webkit-transform: rotate(-180deg);
       -moz-transform: rotate(-180deg);
@@ -1378,7 +1378,7 @@ body {
 
 .ajax-loader {
   font-size: 2em;
-  color: #ffc107; }
+  color: #8BC34A; }
 
 @media (min-width: 1025px) {
   .layout-container .topbar-items {
@@ -1399,8 +1399,8 @@ body {
           position: absolute;
           right: -5px;
           top: -5px;
-          background-color: #ffc107;
-          color: #212121;
+          background-color: #8BC34A;
+          color: #ffffff;
           -moz-border-radius: 50%;
           -webkit-border-radius: 50%;
           border-radius: 50%;
@@ -1460,7 +1460,7 @@ body {
     -webkit-box-shadow: none;
     -moz-box-shadow: none; }
     .layout-container.menu-layout-horizontal .topbar .topbar-left {
-      background-color: #00bcd4;
+      background-color: #607D8B;
       box-shadow: none;
       -webkit-box-shadow: none;
       -moz-box-shadow: none; }
@@ -1472,7 +1472,7 @@ body {
     width: 100%;
     top: 75px;
     height: auto;
-    background-color: #00838f;
+    background-color: #37474F;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26); }
@@ -1504,9 +1504,9 @@ body {
           .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > a:hover i {
             color: #212121; }
         .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > a.active-menuitem-routerlink {
-          color: #ffc107; }
+          color: #8BC34A; }
           .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > a.active-menuitem-routerlink > i {
-            color: #ffc107; }
+            color: #8BC34A; }
           .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > a.active-menuitem-routerlink:hover {
             color: #212121; }
             .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > a.active-menuitem-routerlink:hover i {
@@ -1536,15 +1536,15 @@ body {
           .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > ul li ul ul ul ul ul li a {
             padding-left: 96px; }
         .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > ul li.active-menuitem > a {
-          color: #00bcd4;
+          color: #607D8B;
           background-color: #e8e8e8; }
         .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > ul li.active-menuitem > ul {
           display: block; }
       .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li.active-menuitem > a {
-        color: #212121;
-        background-color: #ffc107; }
+        color: #ffffff;
+        background-color: #8BC34A; }
         .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li.active-menuitem > a i {
-          color: #212121; }
+          color: #ffffff; }
       .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li.active-menuitem > ul {
         display: block; }
     .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark {
@@ -1557,16 +1557,16 @@ body {
           .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li a:hover i {
             color: #ffffff; }
         .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink {
-          color: #ffc107; }
+          color: #8BC34A; }
           .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink i {
-            color: #ffc107; }
+            color: #8BC34A; }
           .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink:hover {
             color: #ffffff; }
             .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li a.active-menuitem-routerlink:hover i {
               color: #ffffff; }
       .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li.active-menuitem > a {
-        color: #212121;
-        background-color: #ffc107; }
+        color: #ffffff;
+        background-color: #8BC34A; }
       .layout-container.menu-layout-horizontal .layout-menu.layout-menu-dark ul.ultima-menu li ul {
         background-color: #424242; }
     .layout-container.menu-layout-horizontal .layout-menu .menuitem-badge {
@@ -1723,8 +1723,8 @@ body {
         position: absolute;
         left: 30px;
         top: 10px;
-        background-color: #ffc107;
-        color: #212121;
+        background-color: #8BC34A;
+        color: #ffffff;
         -moz-border-radius: 50%;
         -webkit-border-radius: 50%;
         border-radius: 50%;
@@ -1738,7 +1738,7 @@ body {
         display: inline-block;
         vertical-align: middle; }
     .layout-container .topbar .topbar-right .topbar-items > li.active-top-menu > a {
-      color: #00bcd4; }
+      color: #607D8B; }
     .layout-container .topbar .topbar-right .topbar-items > li.active-top-menu > ul {
       display: block; }
       .layout-container .topbar .topbar-right .topbar-items > li.active-top-menu > ul li a {
@@ -1764,7 +1764,7 @@ body {
       .layout-container .topbar .topbar-right .topbar-items > li.search-item input:focus ~ label,
       .layout-container .topbar .topbar-right .topbar-items > li.search-item input.ui-state-filled ~ label {
         top: -20px;
-        color: #00bcd4; }
+        color: #607D8B; }
       .layout-container .topbar .topbar-right .topbar-items > li.search-item label {
         top: 1px;
         color: #212121; }
