--- a/src/assets/sass/layout/_login.scss
+++ b/src/assets/sass/layout/_login.scss
@@ -7,7 +7,7 @@
 .login-panel {
     text-align: center;
     width: 350px;
-    min-height: 440px;
+    min-height: calc(100vh - 106px);
     padding: 50px 20px;
     margin: 100px auto 0 auto;
     
@@ -71,7 +71,7 @@
 @media (max-width: 1024px) {
     .login-panel {
         text-align: center;
-        min-height: 440px;
+        min-height: calc(100vh - 106px);
         margin: 100px auto 0 auto;
 
     }
@@ -81,7 +81,7 @@
     .login-panel {
         text-align: center;
         width: 300px;
-        min-height: 440px;
+        min-height: calc(100vh - 106px);
         padding: 40px 20px;
         margin: 75px auto 0 auto;
         
