--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,17 +17,18 @@
 }
 
 .login-body {
-    background: none!important;
-    // background: url("assets/layout/images/home-bg.jpg") top left no-repeat #f7f7f7;
+    background: url("assets/layout/images/home-bg.jpg") center no-repeat #f7f7f7;
     // background-size: 100% auto;
     // height: auto;
     display: flex;
     justify-content: center;
+    background-size: cover;
     height: auto;
     .login-panel {
-        margin: 50px auto 0 auto;
+        margin: 0 0 0 auto;
         opacity: 0.8;
         height: auto;
+        min-height: calc(100vh - 56px);
     }
 }
 .layout-custom {
@@ -61,10 +62,10 @@ fieldset {
 }
 
 .layout-main-custom {
-    padding-top: 60px!important;
-    padding-right: 8px!important;
-    padding-left: 8px!important;
-    padding-bottom: 8px!important;
+    padding-top: 56px!important;
+    // padding-right: 8px!important;
+    // padding-left: 8px!important;
+    // padding-bottom: 8px!important;
 }
 
 body .ui-datatable .ui-datatable-thead > tr th {
