--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -2,14 +2,14 @@
     <div class="card login-panel ui-fluid">
         <form #loginForm="ngForm">
             <div class="ui-g">
-                <div class="ui-g-12">
+                <!-- <div class="ui-g-12">
                     <p-autoComplete name="clinic" placeholder="Select Clinic" [forceSelection]="true" [(ngModel)]="selectedClinic" field="name" [suggestions]="filteredClinics" (completeMethod)="onFilterClinic($event)"
                     required [dropdown]="true" [minLength]="1" (onSelect)="onClinicSelection($value)"></p-autoComplete>
                 </div>
                 <div class="ui-g-12">
                     <p-autoComplete name="branch" placeholder="Select Branch" [forceSelection]="true" [(ngModel)]="selectedBranch" field="name" [suggestions]="filteredBranches" (completeMethod)="onFilterBranch($event)"
                     required [dropdown]="true" [minLength]="1" (onSelect)="onBranchSelection($value)"></p-autoComplete>
-                </div>
+                </div> -->
                 <div class="ui-g-12">
                     <span class="md-inputfield">
                         <input  id="username" name="userName" [(ngModel)]="userName" type="text" autocomplete="off" class="ui-inputtext ui-corner-all ui-state-default ui-widget" required>
