--- a/src/assets/layout/css/gl-layout.css
+++ b/src/assets/layout/css/gl-layout.css
@@ -523,7 +523,7 @@
     background-color: #d6370a; }
   .login-panel .ui-button.secondary:focus {
     outline: 0 none;
-    background-color: #a4d070; }
+    background-color: #d6370a; }
   .login-panel .ui-inputtext:focus {
     border-width: 0 0 2px 0;
     border-color: #607D8B;
