--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@
     height: auto;
     .login-panel {
         margin: 0 0 0 auto;
-        opacity: 0.8;
+        background: rgba(0,0,0,0.8);
         height: auto;
         min-height: calc(100vh - 56px);
     }
@@ -44,7 +44,10 @@
 .tab-view-custom {
     border: none!important;
 }
-
+.gl-stationary > .md-inputfield > .ui-inputtext{
+    background: transparent !important;
+    color: #f7f7f7 !important;
+}
 .input-field-top-padding > div{
     padding-top: 18px!important;  
 }
