--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="ui-g-12">
                     <button type="button" (click) = "login()" [disabled]="!loginForm.form.valid"
-                        class="secondary ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-left">
+                        class="secondary ui-button ui-widget ui-state-default ui-corner-all">
                         <span class="ui-button-text ui-c">Sign In</span>
                     </button>
                     <!-- <button type="button"
