--- a/src/app/demo/view/emptydemo.component.html
+++ b/src/app/demo/view/emptydemo.component.html
@@ -1,4 +1,4 @@
-<div class="ui-fluid">
+<div class="ui-fluid" style="margin-top:20px">
     <div class="ui-g">
         <div class="form-group">
             <div class="ui-g-12 ui-md-12">
