--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@
     height: auto;
     .login-panel {
         margin: 0 0 0 auto;
-        background: rgba(0,0,0,0.8);
+        background: rgba(255, 255, 255, 0.8);
         height: auto;
         min-height: calc(100vh - 56px);
     }
